[FEATURE] Responsive page accueil + correction alignement éléments
mise en place responsive pour page accueil, un élément bouton fantome est encore présent, trouver une solution pour le faire disparaitre prochainement

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,6 +1,8 @@
 .flexboxSmall{
     display: flex;
     flex-direction: column;
+    padding: 10%;
+    font-size: 25px;
 }
 
 .flexboxBig{
@@ -9,6 +11,11 @@
     justify-content: space-between;
     margin: 10%;
 }
+
+.flexboxReverse{
+    flex-direction: row;
+}
+
 
 h2{
     color: #7461CC;
@@ -25,6 +32,7 @@ h2{
     padding: 10px;
     border: none;
     border-radius: 10px;
+    text-align: center;
 }
 
 .linkShop:hover{
@@ -56,5 +64,28 @@ h2{
 
 .video{
     text-align: center;
+    margin-top: 50px;
 }
 
+@media (max-width:900px){
+
+    .bannerHome{
+        width: 100%;
+    }
+
+    .flexboxBig{
+        flex-direction: column-reverse;
+    }
+
+    .imgBloc{
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .actualite-video{
+        width: 90%;
+        height: 400px;
+    }
+
+}
